# python-ai-template

./: .env.example  .gitignore  AGENTS.md  PLAN.md  PLAN.md.example  README.md  REVIEW.md  STATE.md  STATE.md.example  pyproject.toml
.pi/: settings.json
docs/: 000-TRACK_TEMPLATE.md  001-SETUP_TRACK.md  002.2-POST_LOADER_TRACK.md  004.1-WEBAPP_SCAFFOLD_TRACK.md  AGENT_RULES.md  ERROR_RECOVERY.md  LOGGING_RULES.md  REFERENCE.md  VERSIONING_RULES.md
docs/example-tracks/: 002.1-CONTENT_RENDERER_TRACK.md  002.3-SAMPLE_POSTS_TRACK  003-CONFIG_TRACK  004.2-WEBAPP_ROUTES_TRACK  005-FRONTEND_TRACK
etc/: PROMPT_0_FRONTIER.md  PROMPT_0_KICKOFF.md  PROMPT_RESUME.md  PROMPT_RESUME_PI.md  REVIEW-2.md
scripts/: finish_task.py
src/package_name/: cli.py  config.py  logging_config.py
